securitygroups.tf
resource "aws_security_group" "sg" {
    vpc_id = aws_vpc.main.id
    name = "allow-ssh"

    ingress {
        protocol = "tcp"
        from_port = 80
        to_port = 80
        cidr_block = ["0.0.0.0/0"]
    }
    ingress {
        protocol = "tcp"
        from_port = 22
        to_port = 22
        cidr_block = ["0.0.0.0/0"]
    }
    egress {
        protocol = "-1"
        from_port = 0
        to_port = 0
        cidr_block = ["0.0.0.0/0"]
    }
    tags= {
        name = "allow-ssh"
    }
}
